--- a/welcome-page-test.html
+++ b/welcome-page-test.html
@@ -23,7 +23,7 @@
 .img-87, .img-43, .img-61, .img-79, .img-27,
 .img-38, .img-84, .img-17, .img-48, .img-41,
 .img-67, .img-29, .img-32
-{ display: inline-block; background: url('http://tila.com/sprite-icons.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
+{ display: inline-block; background: url('https://s3.ap-south-1.amazonaws.com/tila.com/sprite-icons.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
 
 .img-12 { background-position: -10px -0px; width: 60px; height: 60px; }
 .img-14 { background-position: -10px -70px; width: 60px; height: 46px; }
