--- a/welcome-page-test.html
+++ b/welcome-page-test.html
@@ -23,7 +23,7 @@
 .img-87, .img-43, .img-61, .img-79, .img-27,
 .img-38, .img-84, .img-17, .img-48, .img-41,
 .img-67, .img-29, .img-32
-{ display: inline-block; background-image: url('https://serving.photos.photobox.com/97087048016a51d8fae2a2a76ce1afba5d0c082cc431e9ccd434c75c55ec5f1799a33d40.jpg') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
+{ display: inline-block; background-image: url('https://lh5.googleusercontent.com/r61XDmeu300Rv6WraWJjZpbti4-uCkM4IIlheQIxUWZIeiYercBgNJ-Ew8hm-F_Dl0rEhZL8ieq_ttxYZGRD=w2880-h1596-rw') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
 
 .img-12 { background-position: -10px -0px; width: 60px; height: 60px; }
 .img-14 { background-position: -10px -70px; width: 60px; height: 46px; }
